Fri Jul 23 15:07:21 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* TODO TODO.freddy: updated

Fri Jul 23 09:42:11 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/prepare_results.c: use ird to get column count

Thu Jul 22 16:23:52 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/cursor2.c: fix cursor2 issue

Thu Jul 22 16:11:23 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc_util.c:
	- fix truncation problem setting an ascii string attribute (like
	  catalog)

Thu Jul 22 11:55:12 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/bsqldb.c src/apps/bsqlodbc.c src/apps/datacopy.c:
	* src/apps/defncopy.c src/apps/fisql/fisql.c src/apps/freebcp.c:
	- make applications compile including missing header

Wed Jul 21 22:12:05 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/bsqldb.c src/apps/bsqlodbc.c src/apps/datacopy.c:
	* src/apps/defncopy.c src/apps/fisql/fisql.c src/apps/freebcp.c:
	* src/apps/tsql.c src/tds/locale.c src/tds/mem.c:
	- move setlocale call to applications to avoid global side effects

Wed Jul 21 07:56:18 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/convert_tds2sql.c src/tds/mem.c:
	- avoid core if locale not detected

Tue Jul 20 09:56:36 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/error.c: fix compile using no-gnu compiler

Mon Jul 19 13:51:50 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/Makefile.am src/odbc/unittests/connect.c:
	- fix connect test for windows

Mon Jul 19 12:05:46 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/blk.c:
	- applied patch from Shatam Bhattacharya for blk_rowxfer

Sun Jul 18 09:26:18 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc_util.c: add some checks

Sun Jul 18 08:45:14 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: update driver version
