@@ -1,3 +1,7 @@
+Sat Jul 24 10:08:00 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/dblib/unittests/common.c src/dblib/unittests/rpc.sql:
+	- fix rpc test for Sybase
+
 Fri Jul 23 15:07:21 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* TODO TODO.freddy: updated
 
@@ -2741,4 +2745,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.3089 2010-07-23 13:07:56 freddy77 Exp $
+$Id: ChangeLog,v 1.3090 2010-07-24 08:08:09 freddy77 Exp $
